<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logoHeight"
        android:layout_alignParentTop="true"
        android:src="@drawable/dmologo"
        android:padding="@dimen/logoPadding"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/nameMargin"
        android:text="@string/companyName"
        android:textSize="@dimen/nameTxtSize"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignParentLeft="true"
        android:padding="8dp"
        android:text="@string/phoneNumber"
        android:autoLink="phone"
        android:textSize="18sp"
        android:fontFamily="casual" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_alignParentLeft="true"
        android:padding="@dimen/infoPadding"
        android:text="@string/companyEmail"
        android:autoLink="email"
        android:textSize="@dimen/infoTxtSize"
        android:fontFamily="casual" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_alignParentLeft="true"
        android:padding="@dimen/infoPadding"
        android:text="@string/companyAddress"
        android:autoLink="map"
        android:textSize="@dimen/infoTxtSize"
        android:fontFamily="casual" />

    <TextView
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:layout_alignParentLeft="true"
        android:padding="@dimen/infoPadding"
        android:text="@string/hoursOfOperation"
        android:textSize="@dimen/infoTxtSize"
        android:fontFamily="casual" />

</RelativeLayout>
</ScrollView>
